--- a/project1.html
+++ b/project1.html
@@ -10,7 +10,7 @@
   </head>
   <body
     
-    <div class="canvas">
+  class="canvas">
       <!-- <a
         style="
           background-color: #fff;
