--- a/project1.html
+++ b/project1.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="project1.css" /> -->
     <title>JavaScript Background Color Switcher</title>
   </head>
-  <body
+  <body>
     
   class="canvas">
       <!-- <a
