--- a/project1.html
+++ b/project1.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     
-  class="canvas">
+  <div class="canvas">
       <!-- <a
         style="
           background-color: #fff;
